<resources>
    <string name="app_name">FootRuler</string>

    <string name="new_button">NEW RULER</string>
    <string name="history_button">FEET HISTORY</string>
    <string name="settings_button">SETTINGS</string>
    <string name="logo_desc">App logo</string>

    <string name="settings_header">FootRuler settings</string>
    <string name="settings_server_desc">Web address of the chosen FootRuler server</string>
    <string name="settings_server_placeholder">e.g. https://server.com/</string>
    <string name="default_server_address">https://footruler.kamilki.me/</string>
    <string name="settings_consent_desc">Do you allow FootRuler to store your photos on the server?</string>
    <string name="settings_consent_true">Yes</string>
    <string name="settings_consent_false">No</string>
    <string name="settings_save_button">SAVE</string>
    <string name="history_header">Feet history</string>
    <string name="clear_history">CLEAR HISTORY</string>
    <string name="data_header">MEASUREMENT REPORT</string>
    <string name="remove_from_server">REMOVE FROM SERVER</string>
    <string name="foot_length">LENGTH:</string>
    <string name="foot_width">WIDTH: </string>
    <string name="foot_eu_size">EU SIZE:</string>
    <string name="waiting">Waiting for image analysis…</string>
    <string name="no_feet">NO FEET FOUND</string>
    <string name="one_foot">1 FOOT</string>
    <string name="feet">%1$d FEET</string>
    <string name="foot_no">FOOT #%1$d</string>
    <string name="foot_value">%1$s cm</string>
</resources>