<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FootRuler"
        android:contentDescription="@string/logo_desc">

    <ImageView
            android:layout_width="215dp"
            android:layout_height="215dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            android:contentDescription="@string/logo_desc" />

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="244dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="112dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

    <Button
            android:text="@string/new_button"
            android:layout_width="216dp"
            android:layout_height="73dp"
            android:id="@+id/button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="344dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            android:background="@color/dark_gray"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/dark_gray"
            android:onClick="useCamera" />

    <Button
            android:text="@string/history_button"
            android:layout_width="216dp"
            android:layout_height="73dp"
            android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="424dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            android:background="@color/dark_gray"
            android:backgroundTint="@color/dark_gray"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    <Button
            android:text="@string/settings_button"
            android:layout_width="216dp"
            android:layout_height="73dp"
            android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="504dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:backgroundTint="@color/dark_gray"
            android:onClick="openSettingsMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>