<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/dark_gray"
        android:background="@color/dark_gray">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/foot_no"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="26sp"
                    android:gravity="center" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/color"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom|clip_horizontal">

                <TextView
                        android:text="@string/foot_length"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/timestamp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/length"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top">

                <TextView
                        android:text="@string/foot_width"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/width"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|top">

                <TextView
                        android:text="@string/foot_eu_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/eu_size"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>